# smart_search

./: .coveragerc  .env.example  .gitignore  IMPLEMENTATION_PLAN.md  PLAN_REALITY_CHECK.md  PROGRESS_TRACKING.md  README.md  docker-compose.yml  document.md  effervescent-sleeping-newell.md  execution_log.json  implementation_plan.json  progress.json  pyproject.toml  pytest.ini
docs/: USER_GUIDE.md
scripts/: load_test.py  migrate_to_meilisearch.py
src/smart_search/: __init__.py  config.py  main.py
src/smart_search/api/: __init__.py  orchestrator.py  router.py
src/smart_search/api/endpoints/: __init__.py  analyze.py  graph.py  health.py  index.py  navigate.py  search.py
src/smart_search/core/: __init__.py  exceptions.py
src/smart_search/embedding/: __init__.py  cache.py  jina_embedder.py  models.py  pipeline.py
src/smart_search/graph/: __init__.py  algorithms.py  builder.py  engine.py  models.py  persistence.py
src/smart_search/indexing/: __init__.py  hasher.py  incremental.py  scheduler.py  watcher.py
src/smart_search/parsing/: __init__.py  chunker.py  models.py  tree_sitter_parser.py
src/smart_search/parsing/extractors/: __init__.py  php.py  python.py
src/smart_search/rag/: __init__.py  generator.py  graphrag.py  prompts.py  retriever.py
src/smart_search/search/: __init__.py  hybrid.py  indexer.py  meilisearch_client.py  reference_index.py  schemas.py
src/smart_search/utils/: __init__.py  async_io.py  logging.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_search_workflow.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/performance/: __init__.py  test_benchmark_suite.py  test_embedding_performance.py  test_graph_performance.py  test_parsing_performance.py  test_search_performance.py
tests/unit/: __init__.py  test_config.py  test_exceptions.py  test_health.py  test_logging.py  test_main.py
tests/unit/test_api/: test_analyze.py  test_api_edge_cases.py  test_endpoints_with_data.py  test_graph.py  test_index.py  test_navigate.py  test_orchestrator.py  test_search.py
tests/unit/test_embedding/: __init__.py  test_cache.py  test_jina_embedder.py  test_models.py  test_pipeline.py
tests/unit/test_graph/: test_algorithms.py  test_builder.py  test_engine.py  test_models.py  test_persistence.py
tests/unit/test_indexing/: test_hasher.py  test_incremental.py  test_scheduler.py  test_watcher.py
tests/unit/test_parsing/: test_chunker.py  test_models.py  test_python_extractor.py  test_tree_sitter_parser.py
tests/unit/test_rag/: test_generator.py  test_graphrag.py  test_prompts.py  test_retriever.py
tests/unit/test_search/: __init__.py  test_hybrid.py  test_indexer.py  test_meilisearch_client.py  test_schemas.py
